fixed profile text and img alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,16 @@ td {
 h2 {
   color: #4287f5;
 }
+
+.profileimg{
+  padding-top: 150px;
+  text-align: center;
+}
+.centerprofileimg{
+  Display: flex;
+  height:100%;
+  display:flex; 
+  align-items:center;
+  justify-content:center;
+  padding-bottom: 50px;
+}
